--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "es6-promise": "^4.2.5",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.6",
     "eslint-loader": "2.1.1",
@@ -58,6 +59,7 @@
     "webpack": "4.19.1",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
+    "whatwg-fetch": "^3.0.0",
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
@@ -127,5 +129,7 @@
     "koa-router": "^7.4.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0"
-  }
+  },
+  "proxy":"http://localhost:3001/"  
+
 }
